<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/movie_item"
        android:scaleType="centerCrop"
        tools:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_view_logo"
        android:layout_alignBottom="@+id/image_view_logo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/image_view_logo"
        android:gravity="center|start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/text_view_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:maxLines="1"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/text_size_small"
            tools:text="@string/date_released" />

        <TextView
            android:id="@+id/text_view_seat_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/text_size_small"
            tools:text="@string/movie_type" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/image_view_logo"
        android:layout_alignBottom="@+id/image_view_logo"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/ticket_number"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text_size_small" />


        <TextView
            android:id="@+id/text_view_ticket_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textSize="40sp"
            tools:text="30" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/image_view_logo"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/image_view_logo"
        android:background="@color/gray" />
</RelativeLayout>